fix: swagger docs params
